# pipette

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: client.cpp  server.cpp
pipette/client/: client.cpp  client.hpp
pipette/server/: event_loop.cpp  event_loop.hpp  server.cpp  server.hpp
